--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "color": "^4.2.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "mongoose": "^7.2.1"
